# suncasa-src

./: .__afs06AA  .__afsCEDC  .gitignore  .readthedocs.yaml  LICENSE.rst  README.MD  README.md  README.rst  __init__.py  mytasks.py  pimfit_cli.py-e  ptclean.py-e  ptclean_cli.py  script_clean.py  script_preprocess.py  setup.cfg  setup.py  signalsmooth.py~  subvs_cli.py  subvs_v0.py  subvs_v0.py-e  subvs_v0.xml  subvs_v0_cli.py  subvs_v0_cli.py-e  subvs_v1_cli.py  task_pimfit.py  task_ptclean.py  task_subvs_v0.py  task_subvs_v1.py
DataBrowser/: README.md  XCorr_bsh.sh  XCorr_csh.sh  browser.csh  browser.sh  browser_bsh.sh  config.json  config_init.json  requirements.txt
DataBrowser/EvtBrowser/: EvtID_list.json  README.md  config.json  main.py
DataBrowser/FSview/: QLook_util.py  README.md  main.py  main2.py  main3.py  puffin.py  script_clean.py  script_imfit.py  script_preprocess.py  script_preprocess2.py  script_process.py  script_process0.py  test.py
DataBrowser/QLook/: EvtID_list.json  QLook_prep.py  QLook_prep2.py  config.json  config_EvtID.json  config_baozi.json  main.py  mk_config.py  script.py
DataBrowser/ToClean/: main.py  script_clean.py
DataBrowser/XCorr/: main.py
DataBrowser/XrsCorr/: main.py
QTeovsa_imager/: eovsa_imager.py  helioim2fits.py  pr_summary.py
aiaBrowser/: MkPlot_bsh.sh  MkPlot_csh.sh  StackPlt_bsh.sh  StackPlt_csh.sh  browser_bsh.sh  browser_csh.sh  config.json  main.py
aiaBrowser/MkPlot/: main.py
aiaBrowser/StackPlt/: main.py
docs/: Makefile  conf.py  index.rst  requirements.txt
eovsa/: concateovsa.py  eovsa_diskmodel.py  eovsa_dspec.py  eovsa_fitsutils.py  eovsa_pipeline.py  eovsa_pipelineAlldayFits.py  eovsa_pltQlookImage.py  eovsa_pltQlookMovie.py  eovsa_prep.py  eovsa_qlook_imaging.py  eovsa_readfits.py  eovsa_scaling.py  impteovsa.py
examples/: EOVSA_pyGSfit.py  EOVSA_tutorial_RHESSI2021.ipynb  EOVSA_tutorial_plottingwithAIA.py  EOVSA_tutorial_qlook_imaging_series.py  eovsa_flare_slfcal_example.py
notebooks/: ICRS_on_AIA.ipynb
obsolete/: ctplot_v0.py  subvs_v1.py  subvs_v1.py-e  subvs_v1.xml  subvs_v1_cli.py-e  task_importeovsa.py
shellScript/: pipeline.csh  pipeline1.csh  pipeline_compress.bash  pipeline_fdimg.bash  pipeline_plt.bash  pipeline_plt_movie.bash
suncasa/: casa_compat.py
suncasa/QTeovsa_imager/: fitsutils.py  helioim2fits.py
suncasa/dspec/: __init__.py  dspec.py  gsutils.py
suncasa/eovsa/: concateovsa.py  eovsa_IDBfiledownloader.py  eovsa_diskmodel.py  eovsa_dspec.py  eovsa_fitsutils.py  eovsa_flare_calib.py  eovsa_flare_pipeline.py  eovsa_flarelist.py  eovsa_pipeline.py  eovsa_pltQlookImage.py  eovsa_pltQlookMovie.py  eovsa_scaling.py  eovsa_synoptic_imaging_pipeline.py  eovsa_synoptic_imaging_pipeline_wsclean.py  impteovsa.py  msUtils.py  wrap_wsclean.py
suncasa/io/: ndfits.py
suncasa/pyGSFIT/: GScodes.py  (+4 more)
tasks/: calibeovsa.xml  concateovsa.xml  imfitres.p  importeovsa.py  importeovsa.xml  importeovsa_cli.py  mytasks.py  mytasks.py.copy  pimfit.py  pimfit.py-e  pimfit_cli.py  pimporteovsa.xml  pmaxfit.xml  ptclean.py  ptclean.py-e  ptclean.xml  ptclean2.xml  ptclean3.xml  ptclean_cli.py  ptclean_cli.py-e  signalsmooth.py  subvs.py  subvs.py-e  subvs.xml~  subvs2.xml  subvs_cli.py  subvs_cli.py-e  task_calibeovsa.py  task_concateovsa.py  task_importeovsa.py  task_importeovsa_new.py  task_importeovsa_udb.py  task_pimfit.py  task_pimporteovsa.py  task_pmaxfit.py  task_ptclean.py  task_ptclean2.py  task_ptclean3.py  task_subvs.py  task_subvs2.py
utils/: DButil.py  QLook_util.py  ctplot.py  dspec.py  dspec2.py  fits_wrap.py  fitsutils.py  helio_coordinates.py  helioimage2fits.py  helioimage2fits_new.py  idlsav2sunmap.py  impteovsa.py  imutil.py  lasso_imshow.py  lightcurves.py  lineticks.py  mod_slftbs.py  mstools.py  pipeline1.py  pipeline2.py  pipeline_img.py  pipeline_plt.py  plot_map.py  plot_mapX.py  plot_mapX2.py  plot_wavelet.py  plt_aiamap.py  plt_cents4.py  pltutils.py  puffin.py  qlookplot.py  qlookplot_new.py  radio_data_fetch.py  signal_utils.py  sswutils.py  stackplot.py  stackplotX.py  stputils.py  svplot.py  udb2ms.py  (+1 more)
vla/: helioimage2fits.py  horizon2ephemtab.py  vla_ephemfromhorizons.py  vla_prep.py
zhitao/: task_smooth.py
(+100 files in other folders)
