[metadata]
name = suncasa
provides = suncasa
description = "SunCASA: CASA-based Python package for reducing, analyzing, and visualizing solar dynamic spectroscopic imaging data at radio wavelengths"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The EOVSA team
author_email = sijie.yu@njit.edu
license = BSD 2-Clause
license_file = LICENSE.rst
url = https://github.com/suncasa/suncasa
edit_on_github = True
github_project = suncasa/suncasa
platform = any
keywords = solar physics, solar, science, sun, wcs, coordinates
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    sunpy
    casatools
    casatasks
    casadata
    PyQt5>=5.15.2

[options.extras_require]
asdf =
    asdf>=2.6.0
dask =
    dask[array]>=2.0.0
database =
    sqlalchemy>=1.3.4
image =
    scikit-image>=0.16.0
    scipy>=1.3.0
    sunpy>=2.0.0
jpeg2000 =
    glymur>=0.8.18,!=0.9.0
map =
    matplotlib>=3.1.0
    scipy>=1.3.0
    sunpy>=2.0.0
    ndcube>=1.4.2
net =
    beautifulsoup4>=4.8.0
    drms>=0.6.1
    pandas>=0.24.0
    python-dateutil>=2.8.0
    tqdm>=4.32.1
    zeep>=3.4.0
timeseries =
    h5netcdf>=0.8.1
# While a not direct dependency
# We need to raise this to ensure the goes netcdf files open.
    h5py>=3.1.0
    matplotlib>=3.1.0
    pandas>=0.24.0
visualization =
    matplotlib>=3.1.0
tests =
    jplephem  # For some coordinates tests
    pytest-astropy>=0.8  # 0.8 is the first release to include filter-subpackage
    hypothesis>=6.0.0  # Included in pytest-astropy. 6.0 is the first version to support disabling function-scoped fixture warning
    pytest-doctestplus>=0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
    pytest-mock
    pytest-mpl>=0.12 # First version to support our figure tests
    pytest-intercept-remote>=1.2
    tox
docs =
    astroquery
    jplephem
    packaging
    reproject
    ruamel.yaml
    sphinx
    sphinx-automodapi
    sphinx-changelog>=1.1.0rc1 # First to support towncrier 21.3
    sphinx-gallery>=0.9.0 # First to include the defer figures functionality
    sunpy-sphinx-theme

[options.packages.find]
exclude = suncasa._dev

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110
exclude =
    .git,
    .idea,
    .eggs,
    __pycache__,
    build,
    dist,
    suncasa/__init__.py,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip = suncasa/__init__.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, sunpy, asdf
known_first_party = suncasa
length_sort = False
length_sort_sections = stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
    suncasa/*setup*
    suncasa/extern/*
    suncasa/shellScript/*
    suncasa/build/*
    suncasa/dist/*
    suncasa/*/tests/*
    suncasa/version*
    suncasa/__init__*
    */suncasa/*setup*
    */suncasa/extern/*
    suncasa/*/shellScript/*
    suncasa/*/build/*
    suncasa/*/dist/*
    */suncasa/*/tests/*
    */suncasa/version*

[coverage:report]
exclude_lines =
# Have to re-enable the standard pragma
    pragma: no cover
# Don't complain about packages we have installed
    except ImportError
# Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
# Don't complain about script hooks
    def main\(.*\):
# Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
